--- a/assets/partial/blocks/homePage/_register.scss
+++ b/assets/partial/blocks/homePage/_register.scss
@@ -3,6 +3,7 @@
     color: $register-color;
     @include dFlex(row, center, center);
     height:50vh;
+    overflow: hidden;
 
     @media screen and (max-width:850px) {
         height:66vh;
