--- a/assets/partial/blocks/shopingPages/_flex.scss
+++ b/assets/partial/blocks/shopingPages/_flex.scss
@@ -17,7 +17,7 @@
 
 #fleximgtwo {
     width: 60%;
-    margin: 50px 50px 0 40%;
+    margin: 50px 0 0 40%;
 
     
     @media screen and (min-width:768px) {
